--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,40 @@
                d="M6.33594 8.28906C6.6875 8.64062 7.27344 8.64062 7.625 8.28906L12.9375 2.97656C13.3281 2.58594 13.3281 2 12.9375 1.64844L12.0781 0.75C11.6875 0.398438 11.1016 0.398438 10.75 0.75L6.96094 4.53906L3.21094 0.75C2.85938 0.398438 2.27344 0.398438 1.88281 0.75L1.02344 1.64844C0.632812 2 0.632812 2.58594 1.02344 2.97656L6.33594 8.28906Z" />
          </g>
       </symbol>
+      <symbol viewBox="0 0 50 51" id="pencil-write">
+         <g>
+            <path
+               d="M49.4949 8.22107L43.0836 1.83581C42.1961 0.947722 40.4333 1.25807 39.1576 2.51678L33.2787 8.32431L25.1912 0H0V51H39.6337V21.1519L48.7982 12.1043C50.0642 10.8456 50.3857 9.10403 49.4949 8.22107ZM25.8659 6.65393L30.3211 11.2444L27.8823 13.6548H25.8659V6.65393ZM26.7923 31.3774L17.9228 34.9368L16.0183 33.0375L19.6416 24.2586L26.7923 31.3774ZM35.4593 46.8661H4.17051V4.13394H22.7376V16.7544H24.7442L22.3676 19.0987H8.62371V21.1654H20.2787L18.3944 23.0217L16.475 27.6789H8.62371V29.7474H15.6244L12.9346 36.2584H8.62306V38.3237H31.0171V36.2584H18.9403L28.0259 32.6098L30.9233 29.7474H31.0139V29.6577L35.4555 25.273V46.8667H35.4593V46.8661Z" />
+         </g>
+      </symbol>
+      <symbol viewBox="0 0 50 50" id="arrow-rotate">
+         <g>
+            <path
+               d="M6.50937 28.125H0.19375H0V43.75L4.62812 39.4969C9.1625 45.8531 16.5969 50 25 50C37.75 50 48.2687 40.4563 49.8062 28.125H43.4906C42.0031 36.9938 34.2906 43.75 25 43.75C18.4188 43.75 12.625 40.3562 9.28125 35.2219L17.0031 28.125H6.50937Z" />
+            <path
+               d="M25 0C12.25 0 1.73123 9.54375 0.193726 21.875H6.50935C7.99685 13.0062 15.7094 6.25 25 6.25C31.7781 6.25 37.7187 9.84687 41.0125 15.2375L34.375 21.875H40.625H43.4906H49.8062H50V6.25L45.525 10.725C41.0093 4.24062 33.5 0 25 0Z" />
+         </g>
+      </symbol>
+      <symbol viewBox="0 0 56 50" id="gallery">
+         <g>
+            <path
+               d="M54.3594 0H18.2656C17.3596 0 16.625 0.72684 16.625 1.62338V4.97835H46.0469C48.7608 4.97835 50.9688 7.16309 50.9688 9.84848V33.5498H54.3594C55.2654 33.5498 56 32.8229 56 31.9264V1.62338C56 0.72684 55.2654 0 54.3594 0Z" />
+            <path
+               d="M46.0469 8.2251H9.95312C9.04706 8.2251 8.3125 8.95194 8.3125 9.84847V13.2035H37.7344C40.4483 13.2035 42.6562 15.3882 42.6562 18.0736V41.7749H46.0469C46.9529 41.7749 47.6875 41.048 47.6875 40.1515V9.84847C47.6875 8.95194 46.9529 8.2251 46.0469 8.2251Z" />
+            <path
+               d="M37.7344 16.4502H1.64062C0.734562 16.4502 0 17.177 0 18.0736V48.3766C0 49.2731 0.734562 50 1.64062 50H37.7344C38.6404 50 39.375 49.2731 39.375 48.3766V18.0736C39.375 17.177 38.6404 16.4502 37.7344 16.4502ZM34.4531 43.5065C34.4531 44.403 33.7186 45.1298 32.8125 45.1298H6.5625C5.65644 45.1298 4.92188 44.403 4.92188 43.5065V22.9437C4.92188 22.0472 5.65644 21.3203 6.5625 21.3203H32.8125C33.7186 21.3203 34.4531 22.0472 34.4531 22.9437V43.5065Z" />
+            <path d="M8.20312 40.877V41.8831H16.9635L12.3414 36.2703L8.20312 40.877Z" />
+            <path
+               d="M8.20312 35.9899L11.1696 32.6876C11.841 31.9402 13.0293 31.9654 13.6677 32.7406L18.0105 38.0142L25.0267 29.4939C25.6652 28.7185 26.8534 28.6933 27.5249 29.4408L31.1719 33.5007V24.567H8.20312V35.9899ZM18.0469 27.8138C18.9529 27.8138 19.6875 28.5406 19.6875 29.4371C19.6875 30.3337 18.9529 31.0605 18.0469 31.0605C17.1408 31.0605 16.4062 30.3337 16.4062 29.4371C16.4062 28.5406 17.1408 27.8138 18.0469 27.8138Z" />
+            <path d="M20.1266 40.5844L21.1961 41.8831H31.1718V38.3877L26.3528 33.0234L20.1266 40.5844Z" />
+         </g>
+      </symbol>
+      <symbol viewBox="0 0 55 50" id="finger-up">
+         <g>
+            <path
+               d="M55 21.0446C55 18.2271 52.5863 15.9349 49.6196 15.9349H36.6436L38.5327 11.0407C38.5388 11.0248 38.5446 11.0091 38.5502 10.9932C39.4606 8.39973 39.2314 5.67851 37.8874 3.12307C36.8732 1.19667 34.8348 0 32.5676 0H31.9373C30.4106 0 29.1193 1.1327 28.9971 2.5784C28.7838 5.1065 27.642 7.50106 25.7822 9.32187L15.3904 19.3414H14.3478V17.6381C14.3478 16.6975 13.5448 15.9349 12.5543 15.9349H1.79352C0.802978 15.9349 0 16.6975 0 17.6381V48.2967C0 49.2373 0.802978 50 1.79352 50H12.5544C13.5448 50 14.3479 49.2374 14.3479 48.2967V46.5934H44.2392C47.206 46.5934 49.6197 44.3012 49.6197 41.4837C49.6197 40.5733 49.3679 39.7178 48.9266 38.9768C50.4209 38.0679 51.4132 36.4773 51.4132 34.6706C51.4132 33.7602 51.1614 32.9048 50.7201 32.1637C52.2144 31.2549 53.2067 29.6643 53.2067 27.8576C53.2067 26.9472 52.9549 26.0917 52.5136 25.3507C54.0077 24.442 55 22.8514 55 21.0446ZM10.7609 21.0446V44.8901V46.5934H3.58692V19.3414H10.7609V21.0446ZM49.6196 22.7479H47.826H44.2391C43.2487 22.7479 42.4456 23.5105 42.4456 24.4512C42.4456 25.3919 43.2486 26.1545 44.2391 26.1545H47.826C48.815 26.1545 49.6196 26.9186 49.6196 27.8578C49.6196 28.7969 48.815 29.5611 47.826 29.5611H46.0325H42.4456C41.4552 29.5611 40.6521 30.3236 40.6521 31.2643C40.6521 32.2051 41.4551 32.9676 42.4456 32.9676H46.0325C47.0215 32.9676 47.826 33.7317 47.826 34.6709C47.826 35.6101 47.0215 36.3742 46.0325 36.3742H44.239C44.145 36.3742 44.0535 36.3832 43.9633 36.3963H40.533C39.5425 36.3963 38.7394 37.1589 38.7394 38.0996C38.7394 39.0402 39.5424 39.8029 40.533 39.8029H44.1199C44.2003 39.8029 44.2789 39.7961 44.3565 39.7864C45.2907 39.8443 46.0325 40.5825 46.0325 41.484C46.0325 42.4231 45.2279 43.1873 44.239 43.1873H14.3478V22.7478H16.1413C16.6217 22.7478 17.0819 22.5648 17.4191 22.2398L28.3425 11.7076C28.3455 11.7047 28.3485 11.7017 28.3513 11.6989C30.6565 9.44449 32.1214 6.51801 32.5141 3.40627H32.5676C33.4673 3.40627 34.2765 3.88147 34.6788 4.64578C35.5976 6.39243 35.7576 8.15764 35.155 9.89317L32.3921 17.0519C32.1904 17.5743 32.2703 18.1573 32.6058 18.6134C32.9412 19.0696 33.4901 19.3413 34.076 19.3413H49.6196C50.6085 19.3413 51.4131 20.1054 51.4131 21.0446C51.4131 21.9838 50.6085 22.7479 49.6196 22.7479Z" />
+         </g>
+      </symbol>
    </svg>
    <div class="wrapper">
       <main class="page">
@@ -52,8 +86,8 @@
             </div>
          </header>
          <div class="main-screen">
-            <div class="main-screen__bg-image">
-               <img src="../images/bg-girl.jpg" alt="bg-girl">
+            <div class="main-screen__bg-image" data-section="home">
+               <img src="../images/bg-girl.jpg" id="imageBg" alt="bg-girl">
             </div>
             <div class="container-main">
                <div class="main-screen__information-inner">
@@ -69,6 +103,90 @@
             </div>
          </div>
          <div class="content">
+            <section class="services">
+               <div class="title">iPhone, Smartphones, Tablets, Laptops & More</div>
+               <div class="container">
+                  <div class="services__description">
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                     et dolore magna
+                     aliqua. Amet mauris commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna neque
+                     viverra justo. Leo in
+                     vitae turpis massa sed elementum.
+                  </div>
+                  <div class="services__card-inner">
+                     <div class="services__card card blue">
+                        <div class="card__inner">
+                           <div class="card__icon"><svg class="pencil-write">
+                                 <use xlink: href="#pencil-write"></use>
+                              </svg></div>
+                           <div class="card__title">Warranty</div>
+                           <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
+                              dolore tumber tur adipisicing elit. Lorem ipsum dolor
+                              sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                              magna aliqua. Amet mauris
+                              commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna neque viverra justo.
+                              Leo in vitae turpis massa
+                              sed elementum.
+                           </div>
+                           <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                        </div>
+                     </div>
+                     <div class="services__card card orange">
+                        <div class="card__inner">
+                           <div class="card__icon">
+                              <svg class="arrow-rotate">
+                                 <use xlink: href="#arrow-rotate"></use>
+                              </svg>
+                           </div>
+                           <div class="card__title">Recycling</div>
+                           <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
+                              dolore tumber tur adipisicing elit. Lorem ipsum dolor
+                              amet, consecte tempor incididunt ut labore et dolore tumber tur adipisicing elit. Lorem ipsum
+                              dolor sit amet,
+                              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                              aliqua.
+                           </div>
+                           <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                        </div>
+                     </div>
+                     <div class="services__card card purple">
+                        <div class="card__inner">
+                           <div class="card__icon">
+                              <svg class="gallery">
+                                 <use xlink: href="#gallery"></use>
+                              </svg>
+                           </div>
+                           <div class="card__title">Computer Repair</div>
+                           <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
+                              dolore tumber tur adipisicing elit.
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                              labore et dolore magna
+                              aliqua. Amet mauris commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna
+                              neque viverra justo. Leo in
+                              vitae turpis massa sed elementum.
+                           </div>
+                           <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                        </div>
+                     </div>
+                     <div class="services__card card more-blue">
+                        <div class="card__inner">
+                           <div class="card__icon">
+                              <svg class="finger-up">
+                                 <use xlink: href="#finger-up"></use>
+                              </svg>
+                           </div>
+                           <div class="card__title">Smartphone Repair</div>
+                           <div class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                              eiusmod tempor incididunt ut labore et dolore magna
+                              aliqua. Amet mauris commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna
+                              neque viverra justo. Leo in
+                              vitae turpis massa sed elementum.</div>
+                           <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </section>
          </div>
          <footer class="footer">
             <div class="container" data-section="move">
@@ -81,6 +199,7 @@
    </div>
    <script src="js/select.js"></script>
    <script src="js/BurgerNavigation.js"></script>
+   <script src="js/swiper-bundle.min.js"></script>
    <script src="js/main.js"></script>
 </body>
 
