--- a/app/index.html
+++ b/app/index.html
@@ -106,82 +106,248 @@
             <section class="services">
                <div class="title">iPhone, Smartphones, Tablets, Laptops & More</div>
                <div class="container">
-                  <div class="services__description">
+                  <div class="services__description subtitle">
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                      et dolore magna
                      aliqua. Amet mauris commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna neque
                      viverra justo. Leo in
                      vitae turpis massa sed elementum.
                   </div>
-                  <div class="services__card-inner">
-                     <div class="services__card card blue">
-                        <div class="card__inner">
-                           <div class="card__icon"><svg class="pencil-write">
-                                 <use xlink: href="#pencil-write"></use>
-                              </svg></div>
-                           <div class="card__title">Warranty</div>
-                           <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
-                              dolore tumber tur adipisicing elit. Lorem ipsum dolor
-                              sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                              magna aliqua. Amet mauris
-                              commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna neque viverra justo.
-                              Leo in vitae turpis massa
-                              sed elementum.
-                           </div>
-                           <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+               </div>
+               <div class="services__card-inner">
+                  <div class="services__card card blue">
+                     <div class="card__inner">
+                        <div class="card__icon"><svg class="pencil-write">
+                              <use xlink: href="#pencil-write"></use>
+                           </svg></div>
+                        <div class="card__title title-card">Warranty</div>
+                        <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
+                           dolore tumber tur adipisicing elit. Lorem ipsum dolor
+                           sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                           magna aliqua. Amet mauris
+                           commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna neque viverra justo.
+                           Leo in vitae turpis massa
+                           sed elementum.
+                        </div>
+                        <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                     </div>
+                  </div>
+                  <div class="services__card card orange">
+                     <div class="card__inner">
+                        <div class="card__icon">
+                           <svg class="arrow-rotate">
+                              <use xlink: href="#arrow-rotate"></use>
+                           </svg>
+                        </div>
+                        <div class="card__title">Recycling</div>
+                        <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
+                           dolore tumber tur adipisicing elit. Lorem ipsum dolor
+                           amet, consecte tempor incididunt ut labore et dolore tumber tur adipisicing elit. Lorem ipsum
+                           dolor sit amet,
+                           consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                           aliqua.
+                        </div>
+                        <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                     </div>
+                  </div>
+                  <div class="services__card card purple">
+                     <div class="card__inner">
+                        <div class="card__icon">
+                           <svg class="gallery">
+                              <use xlink: href="#gallery"></use>
+                           </svg>
+                        </div>
+                        <div class="card__title">Computer Repair</div>
+                        <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
+                           dolore tumber tur adipisicing elit.
+                           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                           labore et dolore magna
+                           aliqua. Amet mauris commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna
+                           neque viverra justo. Leo in
+                           vitae turpis massa sed elementum.
+                        </div>
+                        <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                     </div>
+                  </div>
+                  <div class="services__card card more-blue">
+                     <div class="card__inner">
+                        <div class="card__icon">
+                           <svg class="finger-up">
+                              <use xlink: href="#finger-up"></use>
+                           </svg>
+                        </div>
+                        <div class="card__title">Smartphone Repair</div>
+                        <div class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                           eiusmod tempor incididunt ut labore et dolore magna
+                           aliqua. Amet mauris commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna
+                           neque viverra justo. Leo in
+                           vitae turpis massa sed elementum.</div>
+                        <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                     </div>
+                  </div>
+               </div>
+
+            </section><!-- Реализовать рабочие ссылки View more -->
+            <section class="home-and-business">
+               <div class="home-and-business__inform inform">
+                  <div class="inform__inner">
+                     <div class="title">Home and
+                        Business Gudget</div>
+                     <div class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore agna
+                        aliqua.
+                     </div>
+                     <div class="inform__logo-inner logo">
+                        <div class="logo__title subtitle">Home and Business Gudjet</div>
+                        <div class="logo__subtitle subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                           sed do
+                           eiusmod tempor incididunt ut labore et dolore agna
+                           aliqua.
+                        </div>
+                        <ul class="logo__image">
+                           <li class="logo__image-item"><img src="images/A-logo.png" alt=""></li>
+                           <li class="logo__image-item"><img src="images/Alarm-logo.png" alt=""></li>
+                           <li class="logo__image-item"><img src="images/abibas-logo.png" alt=""></li>
+                           <li class="logo__image-item"><img src="images/T-logo.png" alt=""></li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+               <div class="home-and-business__image">
+                  <img src="images/home-and-business.jpg" alt="home-and-business">
+               </div>
+            </section>
+            <section class="fix-for-you">
+               <div class="container">
+                  <div class="fix-for-you__inner">
+                     <div class="fix-for-you__title">
+                        <div class="title">What Can We Fix For You?</div>
+                     </div>
+                     <div class="fix-for-you__description-inner fix-for-you-description subtitle">
+                        <div class="fix-for-you-description__inform ">Our repair services are here to repair your phone,
+                           tablet, computer and game console. Bring your broken device to us for
+                           fast and convenient repair services. What can we fix for you today?</div>
+                        <div class="fix-for-you-description__link-box"><a href="#"
+                              class="fix-for-you-description__link">Let us know</a></div>
+                     </div>
+                  </div>
+               </div>
+            </section>
+            <section class="gallery">
+               <div class="swiper-gallery">
+                  <div class="swiper-wrapper">
+                     <div class="swiper-slide">
+                        <div class="gallery__inner">
+                           <img data-src="images/gallery-1.jpg" src="images/1x1.png" class="swiper-lazy" alt="">
+                           <div class="swiper-lazy-preloader"></div>
                         </div>
                      </div>
-                     <div class="services__card card orange">
-                        <div class="card__inner">
-                           <div class="card__icon">
-                              <svg class="arrow-rotate">
-                                 <use xlink: href="#arrow-rotate"></use>
-                              </svg>
+                     <div class="swiper-slide">
+                        <div class="gallery__inner">
+                           <img data-src="images/gallery-2.jpg" src="images/1x1.png" class="swiper-lazy" alt="">
+                           <div class="swiper-lazy-preloader">
+
                            </div>
-                           <div class="card__title">Recycling</div>
-                           <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
-                              dolore tumber tur adipisicing elit. Lorem ipsum dolor
-                              amet, consecte tempor incididunt ut labore et dolore tumber tur adipisicing elit. Lorem ipsum
-                              dolor sit amet,
-                              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                              aliqua.
-                           </div>
-                           <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
                         </div>
                      </div>
-                     <div class="services__card card purple">
-                        <div class="card__inner">
-                           <div class="card__icon">
-                              <svg class="gallery">
-                                 <use xlink: href="#gallery"></use>
-                              </svg>
+                     <div class="swiper-slide">
+                        <div class="gallery__inner"><img data-src="images/gallery-3.jpg" src="images/1x1.png"
+                              class="swiper-lazy" alt="">
+                           <div class="swiper-lazy-preloader">
+
                            </div>
-                           <div class="card__title">Computer Repair</div>
-                           <div class="card__description">Lorem ipsum dolor amet, consecte tempor incididunt ut labore et
-                              dolore tumber tur adipisicing elit.
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                              labore et dolore magna
-                              aliqua. Amet mauris commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna
-                              neque viverra justo. Leo in
-                              vitae turpis massa sed elementum.
-                           </div>
-                           <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
                         </div>
                      </div>
-                     <div class="services__card card more-blue">
-                        <div class="card__inner">
-                           <div class="card__icon">
-                              <svg class="finger-up">
-                                 <use xlink: href="#finger-up"></use>
-                              </svg>
+                     <div class="swiper-slide">
+                        <div class="gallery__inner"><img data-src="images/gallery-4.jpg" src="images/1x1.png"
+                              class="swiper-lazy" alt="">
+                           <div class="swiper-lazy-preloader">
+
                            </div>
-                           <div class="card__title">Smartphone Repair</div>
-                           <div class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                              eiusmod tempor incididunt ut labore et dolore magna
-                              aliqua. Amet mauris commodo quis imperdiet massa tincidunt. Nisl rhoncus mattis rhoncus urna
-                              neque viverra justo. Leo in
-                              vitae turpis massa sed elementum.</div>
-                           <div class="card__link-box"><a href="" class="card__link-item">View More</a></div>
+                        </div>
+                     </div>
+                     <div class="swiper-slide">
+                        <div class="gallery__inner"><img data-src="images/gallery-5.jpg" src="images/1x1.png"
+                              class="swiper-lazy" alt="">
+                           <div class="swiper-lazy-preloader"></div>
+                        </div>
+                     </div>
+                  </div>
+            </section>
+            <section class="easy-and-simple">
+               <div class="easy-and-simple__inner">
+                  <div class="easy-and-simple__image">
+                     <img src="images/easy-and-simple.jpg" alt="">
+                  </div>
+                  <div class="easy-and-simple__info info">
+                     <div class="info__title title-card">Easy and simple</div>
+                     <div class="subtitle">If you have any electronic devices in need of repair, our Electronic Repairs
+                        can provide an affordable solution. With
+                        fifteen years' experience repairing gadgets, we are confident that we can fix your devices.
+                     </div>
+                     <div class="info__btn-inner">
+                        <button class="btn">Learn more</button>
+                     </div>
+                  </div>
+               </div>
+            </section>
+            <section class="our-clients">
+               <div class="container">
+                  <div class="our-clients__inner">
+                     <div class="title">Our clients</div>
+                     <div class="our-clients__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Morbi tempus iaculis urna id volutpat lacus laoreet.</div>
+                     <ul class="logo__image our-clients__logo">
+                        <li class="logo__image-item"><img src="images/A-logo.png" alt=""></li>
+                        <li class="logo__image-item"><img src="images/Alarm-logo.png" alt=""></li>
+                        <li class="logo__image-item"><img src="images/wow-logo.png" alt=""></li>
+                        <li class="logo__image-item"><img src="images/abibas-logo.png" alt=""></li>
+                        <li class="logo__image-item"><img src="images/T-logo.png" alt=""></li>
+                     </ul>
+                     <div class="our-clients__link-box subtitle"><a href="#" class="our-clients__link">See more</a>
+                        <div class="articles">
+                           <div class="articles__inner">
+                              <div class="articles__burger">
+                                 <span></span>
+                                 <span></span>
+                              </div>
+                              <div class="articles__title">Smartphones Repair</div>
+                              <div class="articles__opinions-inner">
+                                 <div class="opinion__inner">
+                                    <p class="opinion__title">Broken Screens</p>
+                                    <p class="opinion__articles">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                       elit. Iusto voluptates dolorem, odit enim! Aspernatur quos ipsa,
+                                       sit! Repudiandae, laboriosam enim aliquam, similique suscipit quas dicta
+                                       voluptate repellendus distinctio laborum at!</p>
+                                 </div>
+                                 <div class="opinion__inner">
+                                    <p class="opinion__title">Liquid Damage</p>
+                                    <p class="opinion__articles">Lorem ipsum dolor sit amet, consectetur adipisicing
+                                       elit. Iusto voluptates dolorem, odit enim! Aspernatur quos ipsa,
+                                       sit! Repudiandae, laboriosam enim aliquam, similique suscipit quas dicta
+                                       voluptate repellendus distinctio laborum at!</p>
+                                 </div>
+                                 <div class="opinion__inner">
+                                    <p class="opinion__title">Camera Replacement</p>
+                                    <p class="opinion__articles">
+                                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto voluptates
+                                       dolorem, odit enim! Aspernatur quos ipsa,
+                                       sit! Repudiandae, laboriosam enim aliquam, similique suscipit quas dicta
+                                       voluptate repellendus distinctio laborum at!
+                                    </p>
+                                 </div>
+                                 <div class="opinion__inner">
+                                    <p class="opinion__title">Not charging</p>
+                                    <p class="opinion__articles">
+                                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto voluptates
+                                       dolorem, odit enim! Aspernatur quos ipsa,
+                                       sit! Repudiandae, laboriosam enim aliquam, similique suscipit quas dicta
+                                       voluptate repellendus distinctio laborum at!
+                                    </p>
+                                 </div>
+                              </div>
+                           </div>
                         </div>
                      </div>
                   </div>
